Fix spacing of Characters, now centered after margin adjustment

--- a/index.css
+++ b/index.css
@@ -114,8 +114,8 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: baseline;
-    padding: 16px;
+    align-items: center;
+    margin-right: 60px;
 }
 
 .blurb {
